--- a/index.html
+++ b/index.html
@@ -209,7 +209,18 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <!-- Deleted to give space por real payments
+            <button class="btn btn-success btn-large">Preorder</button>-->
+            
+            <a class="coinbase-button" 
+              data-code="e612f64a15eac1d6323fbe12f10b9471" 
+              data-button-style="custom_large" 
+              data-button-text="Preorder with Bitcoin"
+              href="https://coinbase.com/checkouts/e612f64a15eac1d6323fbe12f10b9471">
+              Preorder With Bitcoin</a>
+              <script src="https://coinbase.com/assets/button.js" 
+              type="text/javascript"></script>
+          
           </div>
           </div>
           <div class="row-fluid">
